Updated Simple Vehicle sheet so that the DR kinda works

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -405,13 +405,14 @@
             </table>
 
             <h2 class="bold" style="text-align: center;">Location DR</h2>
+
+            {{#each actor.system.vehicle.loc as |location id|}}
+            {{#if (or (eq ../actor.system.vehicle.drMethod "facingPlus") (and (eq ../actor.system.vehicle.drMethod "facing") (or (eq location.code "g") (eq location.code "G"))))}}
             <table>
-              {{#each actor.system.vehicle.loc as |location id|}}
               <tr>
-                <td>
-                  {{loc.Name}} ({{loc.code}})
-                </td>
-                <td></td>
+                <th colspan="2">
+                  {{location.Name}} ({{location.code}})
+                </th>
               </tr>
               <tr>
                 <td>Does this location have it's own DR?</td>
@@ -433,8 +434,9 @@
                   <input name="system.vehicle.loc.{{id}}.dr" type="number" value="{{location.dr}}" placeholder="2" />
                 </td>
               </tr>
-              {{/each}}
             </table>
+            {{/if}}
+            {{/each}}
             {{/unless}}
             {{/if}}
           </div>
@@ -453,336 +455,6 @@
       {{!-- Chase Tab --}}
       <div class="tab chase" data-tab="chase" data-group="primary">
         Chase tab
-      </div>
-
-      {{!-- Combat Tab --}}
-      <div id="weapons" class="tab items" data-tab="combat" data-group="primary">
-        <div class="encumbranceTable">
-          <table>
-            <tr class="enc-header">
-              <td>Level</td><td>Max Load</td><td>Move</td><td>Dodge</td>
-            </tr>
-            {{#each actor.system.encumbrance as |enc id|}}
-            {{#unless enc.ref}}
-            {{#if (eq ../actor.system.encumbrance.current.title enc.title)}}
-            <tr class="enc-entry enc-current">
-              {{else}}
-            <tr class="enc-entry enc-inactive">
-              {{/if}}
-              <td>{{enc.title}}</td>
-              <td>{{enc.lbs}}</td>
-              <td>{{enc.move}}</td>
-              <td>{{enc.dodge}}
-                <label class="fa fa-dice-six rollable" data-level="{{enc.dodge}}"
-                       data-label="Makes a &lt;b&gt;Dodge&lt;/b&gt; roll at an encumbrance level of {{enc.title}}" data-type="skill"></label>
-              </td>
-            </tr>
-            {{/unless}}
-            {{/each}}
-          </table>
-          <table class="combat-table">
-            <tr>
-              <td>
-                <span class="bold">Swing:</span>
-              </td>
-              <td style="width: 15%">
-                {{actor.system.baseDamage.swing}}
-                <label class="fa fa-dice-six rollable" data-level="{{actor.system.baseDamage.swing}}"
-                       data-label="Makes a &lt;b&gt;Swing&lt;/b&gt; Damage roll." data-type="damage"></label>
-              </td>
-              <td>
-                <span class="bold">Vision - Front</span>
-              </td>
-              <td>
-                <div class="tooltip">
-                  <input type="number" name="system.vision.front" class="atrPoints" value="{{actor.system.vision.front}}"
-                         data-dtype="Number" />
-                  <span class="tooltiptext">
-											<span style="text-decoration: underline">DO NOT FUCK WITH</span><br>
-												The following are examples<br>
-												Tunnel Vision - 60<br>
-												No Peripheral - 120<br>
-												Standard - 180<br>
-												Peripheral Vision - 240<br>
-												360 Vision - 360<br>
-										</span>
-                </div>
-              </td>
-              <td>
-                <span class="bold">Enhanced Parry</span>
-              </td>
-              <td>
-                <input type="number" name="system.enhanced.parry" class="atrPoints" value="{{actor.system.enhanced.parry}}"
-                       data-dtype="Number" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <span class="bold">Thrust:</span>
-              </td>
-              <td style="width: 15%">
-                {{actor.system.baseDamage.thrust}}
-                <label class="fa fa-dice-six rollable" data-level="{{actor.system.baseDamage.thrust}}"
-                       data-label="Makes a &lt;b&gt;Thrust&lt;/b&gt; Damage roll." data-type="damage"></label>
-              </td>
-              <td>
-                <span class="bold">Vision - Side</span>
-              </td>
-              <td>
-                <div class="tooltip">
-                  <input type="number" name="system.vision.side" class="atrPoints" value="{{actor.system.vision.side}}"
-                         data-dtype="Number" />
-                  <span class="tooltiptext">
-											<span style="text-decoration: underline">DO NOT FUCK WITH</span><br>
-												The following are examples<br>
-												Tunnel Vision - 60<br>
-												No Peripheral - 120<br>
-												Standard - 240<br>
-												Peripheral Vision - 360<br>
-												360 Vision - 360<br>
-										</span>
-                </div>
-              </td>
-              <td>
-                <span class="bold">Enhanced Block</span>
-              </td>
-              <td>
-                <input type="number" name="system.enhanced.block" class="atrPoints" value="{{actor.system.enhanced.block}}"
-                       data-dtype="Number" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <span class="bold">Combat Reflexes:</span>
-              </td>
-              <td>
-                <input type="checkbox" name="system.flag.combatReflexes" {{checked actor.system.flag.combatReflexes}} data-dtype="Boolean"/>
-              </td>
-              <td colspan="2">
-
-              </td>
-              <td>
-                <span class="bold">Enhanced Dodge</span>
-              </td>
-              <td>
-                <input type="number" name="system.enhanced.dodge" class="atrPoints" value="{{actor.system.enhanced.dodge}}"
-                       data-dtype="Number" />
-              </td>
-            </tr>
-          </table>
-        </div>
-        <table class="items-list">
-          <tr class="bold">
-            <th colspan="8" class="combat-tab-attack-header">Melee Attacks</th>
-          </tr>
-          <tr class="bold">
-            <td>Source</td>
-            <td>Attack Name</td>
-            <td>Skill</td>
-            <td>Parry</td>
-            <td>Block</td>
-            <td>Damage</td>
-            <td>Reach</td>
-            <td>ST</td>
-          </tr>
-          {{#each actor.items as |item id|}}
-          {{#each item.system.melee as |melee mid|}}
-          {{#showAttackInCombatTab item}}
-          <tr>
-            <td>{{item.name}}</td>
-            <td>{{melee.name}}</td>
-            <td>
-              {{melee.skill}}: {{melee.level}}
-              <label class="fa fa-dice-six rollable" data-level="{{melee.level}}"
-                     data-label="Makes a &lt;b&gt;{{item.name}} {{melee.name}}&lt;/b&gt; Skill roll." data-type="skill"></label>
-            </td>
-            <td>
-              {{melee.parry}}{{melee.parryType}}
-              {{#if (isInt melee.parry)}}
-              <label class="fa fa-dice-six rollable" data-level="{{melee.parry}}"
-                     data-label="Makes a &lt;b&gt;{{item.name}}&lt;/b&gt; Parry roll." data-type="skill"></label>
-              {{/if}}
-            </td>
-            <td>
-              {{melee.block}}
-              {{#if (isInt melee.block)}}
-              <label class="fa fa-dice-six rollable" data-level="{{melee.block}}"
-                     data-label="&lt;b&gt;{{item.name}}&lt;/b&gt; Block roll." data-type="skill"></label>
-              {{/if}}
-            </td>
-            <td>
-              {{melee.damage}} {{melee.damageType}} ({{melee.armourDivisor}})
-              <label class="fa fa-dice-six rollable" data-level="{{melee.damage}}"
-                     data-label="Makes a &lt;b&gt;{{item.name}} {{melee.name}}&lt;/b&gt; Damage roll." data-type="damage"></label>
-            </td>
-            <td>{{melee.reach}}</td>
-            <td>{{melee.st}}</td>
-          </tr>
-          {{/showAttackInCombatTab}}
-          {{/each}}
-          {{/each}}
-        </table>
-        <table class="items-list">
-          <tr class="bold">
-            <th colspan="11" class="combat-tab-attack-header">Ranged Attacks</th>
-          </tr>
-          <tr class="bold">
-            <td>Source</td>
-            <td>Attack Name</td>
-            <td>Skill</td>
-            <td>Acc</td>
-            <td>Damage</td>
-            <td>Range</td>
-            <td>Rof</td>
-            <td>Shots</td>
-            <td>Bulk</td>
-            <td>Rcl</td>
-            <td>ST</td>
-          </tr>
-          {{#each actor.items as |item id|}}
-          {{#each item.system.ranged as |ranged rid|}}
-          {{#showAttackInCombatTab item}}
-          <tr>
-            <td>{{item.name}}</td>
-            <td>{{ranged.name}}</td>
-            <td>
-              {{ranged.skill}}: {{ranged.level}}
-              <label for="ranged.skill" class="fa fa-dice-six rollable" data-level="{{ranged.level}}"
-                     data-label="Makes a &lt;b&gt;{{item.name}} {{ranged.name}}&lt;/b&gt; Skill roll." data-type="skill"></label>
-            </td>
-            <td>{{showFullAcc ranged.acc ranged.scopeAcc}}</td>
-            <td>
-              {{ranged.damage}} {{ranged.damageType}} ({{ranged.armourDivisor}})
-              <label for="ranged.damage" class="fa fa-dice-six rollable" data-level="{{ranged.damage}}"
-                     data-label="Makes a &lt;b&gt;{{item.name}} {{ranged.name}}&lt;/b&gt; Damage roll." data-type="damage"></label>
-            </td>
-            <td>{{ranged.range}}</td>
-            <td>{{ranged.rof}}</td>
-            <td>{{ranged.shots}}</td>
-            <td>{{ranged.bulk}}</td>
-            <td>{{ranged.rcl}}</td>
-            <td>{{ranged.st}}</td>
-          </tr>
-          {{/showAttackInCombatTab}}
-          {{/each}}
-          {{/each}}
-        </table>
-        <table class="items-list">
-          <tr class="bold">
-            <th colspan="8" class="combat-tab-attack-header">Afflictions</th>
-          </tr>
-          <tr class="bold">
-            <td>Source</td>
-            <td>Affliction Name</td>
-            <td>Level</td>
-            <td>Damage</td>
-            <td>Resistance Roll</td>
-            <td>Rule Of</td>
-          </tr>
-          {{#each actor.items as |item id|}}
-          {{#each item.system.affliction as |affliction mid|}}
-          {{#showAttackInCombatTab item}}
-          <tr>
-            <td>{{item.name}}</td>
-            <td>{{affliction.name}}</td>
-            <td>
-              {{affliction.skill}}: {{affliction.level}}
-              <label class="fa fa-dice-six rollable" data-level="{{affliction.level}}"
-                     data-label="Casts &lt;b&gt;{{item.name}} {{affliction.name}}&lt;/b&gt;" data-type="skill"></label>
-            </td>
-            <td>
-              {{affliction.damage}} {{affliction.damageType}} ({{affliction.armourDivisor}})
-              <label class="fa fa-dice-six rollable" data-level="{{affliction.damage}}"
-                     data-label="Makes a &lt;b&gt;{{item.name}} {{affliction.name}}&lt;/b&gt; Damage roll." data-type="damage"></label>
-            </td>
-            <td>{{affliction.resistanceRoll}} {{affliction.resistanceRollPenalty}}</td>
-            <td>{{affliction.ruleOf}}</td>
-          </tr>
-          {{/showAttackInCombatTab}}
-          {{/each}}
-          {{/each}}
-        </table>
-      </div>
-
-      {{!-- Items Tab --}}
-      <div id="items" class="tab items" data-tab="items" data-group="primary">
-        {{!-- List of Items --}}
-        <table class="items-list">
-          <tr class="bold">
-            <td class="item-image"></td>
-            <td class="item-name">Name</td>
-            <td class="item-notes">Notes</td>
-            <td class="item-title" style="padding-right: 0.2em">TL</td>
-            <td class="item-title" style="padding-right: 0.2em">LC</td>
-            <td class="item-title" style="padding-right: 0.2em">Qty</td>
-            <td class="item-title" style="text-align: center;">$</td>
-            <td class="item-title" style="padding-right: 0.2em; text-align: center;">lbs</td>
-            <td class="item-title">Status</td>
-            <td class="item-controls"></td>
-          </tr>
-          {{#each actor.system.equipmentCategories as |category cat|}}
-          {{#unless (eq category "")}}
-          <tr class="item item-header trait-category-header">
-            <td colspan="10">
-              <a class="accordion" id="e-accordion-clickable-{{category}}">{{category}}</a>
-            </td>
-          </tr>
-          {{/unless}}
-
-          {{#each ../items as |item id|}}
-          {{#if (or (eq type "Equipment") (eq type "Custom Weapon") (eq type "Custom Armour") (eq type "Travel Fare") (eq type "Custom Jewelry")) }}
-          {{#if (eq item.system.subCategory category)}}
-          <tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
-            <td class="item-image" style="width: 24px; padding: 0 2px">
-              <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-            </td>
-            <td class="item-name"><span>{{item.name}}</span></td>
-            <td class="item-notes"><span>{{item.system.shortNotes}}</span></td>
-            <td style="width: 1em;"><span>{{item.system.tl}}</span></td>
-            <td style="width: 1em;"><span>{{item.system.lc}}</span></td>
-            <td style="width: 1.5em;"><span>{{item.system.quantity}}</span></td>
-            <td style="text-align: center;"><span>{{round item.system.ttlCost 100}} $</span></td>
-            <td style="text-align: center;"><span>{{round item.system.ttlWeight 100}} lb{{checkPlural item.system.ttlWeight}}</span></td>
-            <td style="width: 62px;"><span>{{equipStatusToString item.system.equipStatus}}</span></td>
-            <td class="item-controls" style="width: 30px;">
-              <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-            </td>
-          </tr>
-          {{/if}}
-          {{/if}}
-          {{/each}}
-          {{/each}}
-          <tr class="item item-money">
-            <td class="item-image"></td>
-            <td class="item-name"><span></span></td>
-            <td class="item-notes"><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span class="bold">Money:</span></td>
-            <td style="text-align: center;">
-							<span>
-								<input type="number" name="system.bio.money" style="width: 25%" value="{{actor.system.bio.money}}" data-dtype="Number" /> $
-							</span>
-            </td>
-            <td style="text-align: center;"><span></span></td>
-            <td><span></span></td>
-            <td class="item-controls"></td>
-          </tr>
-          <tr class="item">
-            <td class="item-image"></td>
-            <td class="item-name"><span></span></td>
-            <td class="item-notes"><span></span></td>
-            <td><span></span></td>
-            <td><span></span></td>
-            <td><span class="bold">Totals:</span></td>
-            <td style="text-align: center;"><span>{{round actor.system.bio.carriedValue 100}} $</span></td>
-            <td style="text-align: center;"><span>{{round actor.system.bio.carriedWeight 100}} lb{{checkPlural actor.system.bio.carriedWeight}}</span></td>
-            <td><span></span></td>
-            <td class="item-controls"></td>
-          </tr>
-
-        </table>
       </div>
 
     </section>
