Updated the item.js and actor sheet to correctly handle range, separating 1/2D and Max range into separate values for calculation and display.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -580,7 +580,7 @@
 							<label for="ranged.damage" class="fa fa-dice-six rollable" data-level="{{ranged.damage}}"
 								   data-label="Makes a &lt;b&gt;{{item.name}} {{ranged.name}}&lt;/b&gt; Damage roll." data-type="damage"></label>
 						</td>
-						<td>{{ranged.range}}</td>
+						<td>{{ranged.halfRange}} / {{ranged.maxRange}}</td>
 						<td>{{ranged.rof}}</td>
 						<td>{{ranged.shots}}</td>
 						<td>{{ranged.bulk}}</td>
